# LeitMind

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  install.sh  justfile  package-lock.json
backend/: README.md
backend/LeitMind/: .env.template  README.md  main.py  pyproject.toml
backend/LeitMind/alembic/: env.py
backend/LeitMind/alembic/versions/: 11cdbc007ab5_create_sub_category_theme.py  19fe453b88d0_add_validation.py  3aa6ae50d0a8_modify_answers.py  450a7bae2901_create_user_sub.py  4df70953acaa_create_sub_category_and_theme.py  7369c8cf7f90_initial_migration.py  777078dc0361_recreate_tables.py  b17f616f8e45_update_sub_cat.py  f1ee81459050_create_user_sub.py  f288e56ea0ce_fix_ambiguous_foreign_keys.py  ffb398724b66_initial_migration.py
backend/LeitMind/commons/: errors.py  utils.py
backend/LeitMind/controller/: controller.py  global_parameters.py
backend/LeitMind/domains/: auth_services.py  models_loader.py  use_cases_services.py
backend/LeitMind/domains/auth/interfaces/: auth_repository_postgres.py
backend/LeitMind/domains/auth/models/: user.py  user_setting.py
backend/LeitMind/domains/auth/schemas/: user.py
backend/LeitMind/domains/auth/use_cases/: auth_user_use_case.py  create_user_use_case.py  delete_user_use_case.py  get_user_use_case.py  update_user_use_case.py
backend/LeitMind/domains/feedback/models/: feedback.py
backend/LeitMind/domains/interfaces/: questions_repository_postgres.py
backend/LeitMind/domains/leaderboards/models/: leaderboard.py  leaderboard_history.py
backend/LeitMind/domains/notifications/models/: notification.py
backend/LeitMind/domains/purchases/models/: in_app_purchase.py  virtual_currency.py
backend/LeitMind/domains/questions/interfaces/: attempt_repository_postgres.py  questions_repository_postgres.py  subscription_repository_postgres.py
backend/LeitMind/domains/questions/models/: achievement.py  answer.py  attempt.py  category.py  progress.py  question.py  streak.py  sub_category.py  sub_theme.py  subscription.py  theme.py  user_achievement.py  user_subscription.py  user_subscriptions.py
backend/LeitMind/infrastructure/api/: bootstrap.py
backend/LeitMind/tests/: test_auth_api_rest.py  test_category_use_case.py  test_manage_attempt_use_case.py
backend/LeitMind/utils/: security.py
(+42 files in other folders)
