[tool.poetry]
name = "leitmind"
version = "0.1.0"
description = ""
authors = ["Jilvo <jmillot41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.1.0"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.0"
pytest = "^8.3.4"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
pre-commit = "^4.0.1"
uvicorn = "^0.34.0"
kink = "^0.8.1"
psycopg2-binary = "^2.9.10"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
pandas = "^2.2.3"
boto3 = "^1.38.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 150
